[package]
name = "texray-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-texray = "0.1"
rayon = "1.8"
p3-maybe-rayon = { version = "0.2", default-features = false }
tokio = { version = "1.36", features = ["full"] }
rand = "0.8"

[features]
parallel = ["p3-maybe-rayon/parallel"]
